# Qt5

./: .gitmodules  .tag
qtactiveqt/: .tag  CMakeLists.txt  licenseRule.json  sync.profile
qtactiveqt/coin/: module_config.yaml
qtactiveqt/examples/: CMakeLists.txt
qtactiveqt/examples/activeqt/: CMakeLists.txt  activeqt.pro
qtactiveqt/include/ActiveQt/: activeqtversion.h
qtactiveqt/src/: CMakeLists.txt
qtactiveqt/src/activeqt/: CMakeLists.txt  activeqt.prx
qtactiveqt/src/tools/: CMakeLists.txt
qtactiveqt/tests/auto/: CMakeLists.txt
qtactiveqt/tests/manual/: CMakeLists.txt  manual.pro
qtactiveqt/tools/: CMakeLists.txt
qtactiveqt/tools/dumpcpp/: CMakeLists.txt  main.cpp  moc.cpp  moc.h
qtactiveqt/tools/dumpdoc/: CMakeLists.txt  main.cpp
qtactiveqt/tools/testcon/: CMakeLists.txt  ambientproperties.cpp  ambientproperties.h  ambientproperties.ui  changeproperties.cpp  changeproperties.h  changeproperties.ui  controlinfo.cpp  controlinfo.h  controlinfo.ui  docuwindow.cpp  docuwindow.h  invokemethod.cpp  invokemethod.h  invokemethod.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  sandboxing.cpp  sandboxing.h
qtcoap/: .QT-ENTERPRISE-LICENSE-AGREEMENT  .tag  CMakeLists.txt  README.md  sync.profile
qtcoap/examples/: CMakeLists.txt  examples.pro
qtcoap/examples/coap/: CMakeLists.txt  coap.pro
qtcoap/src/: CMakeLists.txt
qtcoap/src/coap/: CMakeLists.txt  qcoapclient.cpp  qcoapclient.h  qcoapclient_p.h  qcoapconnection.cpp  qcoapconnection_p.h  qcoapglobal.h  qcoapinternalmessage.cpp  qcoapinternalmessage_p.h  qcoapinternalreply.cpp  qcoapinternalreply_p.h  qcoapinternalrequest.cpp  qcoapinternalrequest_p.h  qcoapmessage.cpp  qcoapmessage.h  qcoapmessage_p.h  qcoapnamespace.cpp  qcoapnamespace.h  qcoapnamespace_p.h  qcoapoption.cpp  qcoapoption.h  qcoapoption_p.h  qcoapprotocol.cpp  qcoapprotocol_p.h  qcoapqudpconnection.cpp  qcoapqudpconnection_p.h  qcoapreply.cpp  qcoapreply.h  qcoapreply_p.h  qcoaprequest.cpp  qcoaprequest.h  qcoaprequest_p.h  qcoapresource.cpp  qcoapresource.h  qcoapresource_p.h  qcoapresourcediscoveryreply.cpp  qcoapresourcediscoveryreply.h  qcoapresourcediscoveryreply_p.h  qcoapsecurityconfiguration.cpp  qcoapsecurityconfiguration.h
qtcoap/tests/auto/: CMakeLists.txt  coapnetworksettings.h
qtcoap/tests/testserver/: docker-compose.yml
qtgraphs/examples/: CMakeLists.txt  examples.pro
qtgraphs/examples/graphs/: CMakeLists.txt
qtgraphs/src/: CMakeLists.txt
qtgraphs/src/doc/: qtgraphs-index.qdoc  qtgraphs.qdoc  qtgraphs.qdocconf
qtgraphs/src/graphs/: CMakeLists.txt
qtgraphs/src/graphs2d/: CMakeLists.txt  charthelpers_p.h  configure.cmake  qabstractseries.cpp  qabstractseries.h  qabstractseries_p.h  qgraphsview.cpp  qgraphsview_p.h
qtgraphs/src/graphs3d/: CMakeLists.txt  configure.cmake
qtgraphs/tests/auto/: CMakeLists.txt
qtgrpc/: .clang-format  .tag  CMakeLists.txt  licenseRule.json  qt_attribution.json  qt_cmdline.cmake  sync.profile
qtgrpc/cmake/: FindWrapProtobuf.cmake  FindWrapProtoc.cmake  FindWrapgRPC.cmake  FindWrapgRPCPlugin.cmake
qtgrpc/examples/: CMakeLists.txt
qtgrpc/examples/grpc/: CMakeLists.txt
qtgrpc/examples/protobuf/: CMakeLists.txt
qtgrpc/src/: CMakeLists.txt
qtgrpc/src/grpc/: CMakeLists.txt  (+35 more)
qtgrpc/tests/: CMakeLists.txt
qtimageformats/: .tag  CMakeLists.txt  qt_cmdline.cmake
qtimageformats/cmake/: FindLibmng.cmake  FindWrapJasper.cmake  FindWrapWebP.cmake
qtimageformats/src/: CMakeLists.txt
qtlanguageserver/: .tag  CMakeLists.txt  conanfile.py  sync.profile
qtlanguageserver/src/: CMakeLists.txt  qtlanguageserver.qdoc
qtlottie/: .tag  CMakeLists.txt  sync.profile
qtlottie/src/: CMakeLists.txt  src.pro  unsupported_features.txt
qtlottie/tests/: tests.pro
qtpositioning/: .tag  CMakeLists.txt  conanfile.py  dependencies.yaml  licenseRule.json  sync.profile
qtpositioning/LICENSES/: OFL-1.1.txt
qtpositioning/cmake/: FindGconf.cmake  FindGypsy.cmake
qtpositioning/examples/: CMakeLists.txt  examples.pro
qtpositioning/src/: CMakeLists.txt
qtquick3dphysics/: .cmake.conf  .tag  CMakeLists.txt  README.md  configure.cmake  configure.json  dependencies.yaml  sync.profile
qtquick3dphysics/examples/: CMakeLists.txt  examples.pro
qtquick3dphysics/src/: CMakeLists.txt
qtquick3dphysics/tools/: CMakeLists.txt
qtquickeffectmaker/: .cmake.conf  .tag  CMakeLists.txt  dependencies.yaml  licenseRule.json
qtquickeffectmaker/coin/: module_config.yaml
qtquickeffectmaker/examples/: CMakeLists.txt  examples.pro
qtquickeffectmaker/nodes/: CMakeLists.txt
qtquickeffectmaker/tools/: CMakeLists.txt
qtscxml/: .qmake.conf  .tag  CMakeLists.txt  licenseRule.json  qt_cmdline.cmake  sync.profile
qtscxml/cmake/: QtRepoSetup.cmake
qtscxml/examples/: CMakeLists.txt  examples.pro
qtscxml/src/: CMakeLists.txt
qtscxml/tests/: CMakeLists.txt
qtscxml/tools/: CMakeLists.txt
qtsensors/: .tag  CMakeLists.txt  licenseRule.json  qt_cmdline.cmake  sync.profile
qtsensors/cmake/: FindSensorfw.cmake
qtsensors/examples/: CMakeLists.txt
qtsensors/src/: CMakeLists.txt
qttranslations/: .tag  CMakeLists.txt  dependencies.yaml
qttranslations/coin/: module_config.yaml
qttranslations/translations/: CMakeLists.txt  assistant_de.ts  assistant_fr.ts  assistant_hr.ts  assistant_hu.ts  assistant_ka.ts  assistant_ko.ts  assistant_nl.ts  assistant_pt_BR.ts  assistant_ru.ts  assistant_tr.ts  assistant_zh_TW.ts  designer_da.ts  designer_de.ts  designer_fr.ts  designer_hr.ts  designer_hu.ts  designer_ka.ts  designer_ko.ts  designer_nl.ts  designer_ru.ts  designer_tr.ts  designer_zh_TW.ts  git-stage-script.cmake  linguist_da.ts  linguist_de.ts  linguist_es.ts  linguist_fr.ts  linguist_hr.ts  linguist_hu.ts  linguist_ka.ts  linguist_ko.ts  linguist_nl.ts  linguist_ru.ts  linguist_tr.ts  linguist_zh_TW.ts  qt_ar.ts  qt_bg.ts  qt_ca.ts  qt_cs.ts  (+142 more)
qtwebview/: .qmake.conf  .tag  CMakeLists.txt  dependencies.yaml  sync.profile
qtwebview/coin/: module_config.yaml
qtwebview/examples/: CMakeLists.txt
qtwebview/src/: CMakeLists.txt
qtwebview/tests/: CMakeLists.txt  tests.pro
(+5402 files in other folders)
